@@ -58,6 +58,9 @@
 [data11_p851_muhad]
     container = datasets/lephad/mu_data.txt
     type = DATA
+[data11_p851_ehad]
+    container = datasets/lephad/e_data.txt
+    type = DATA
 [retry_data_lephad]
     container = datasets/lephad/retry_data.txt
     type = DATA
