@@ -2,5 +2,5 @@
 nGBPerJob = 8
 athenaTag = AtlasProduction,17.2.0.2
 cmtConfig = x86_64-slc5-gcc43-opt
-excludedSite = ANALY_SLAC,ANALY_AUSTRALIA,ANALY_LRZ,ANALY_CAM,ANALY_PIC,ANALY_SARA,ANALY_QMUL,ANALY_HU_ATLAS_Tier2,ANALY_NET2,ANALY_LANCS
+excludedSite = ANALY_SLAC,ANALY_AUSTRALIA,ANALY_LRZ,ANALY_CAM,ANALY_PIC,ANALY_SARA,ANALY_QMUL,ANALY_HU_ATLAS_Tier2,ANALY_NET2,ANALY_LANCS,ANALY_AGLT2,ANALY_DESY-ZN,ANALY_CSCS,ANALY_RHUL,ANALY_VICTORIA-WG1,ANALY_INFI-NAPOLI,ANALY_CC-T2_LONG,ANALY_GRIF-LAL,ANALY_SFU_bugaboo,ANALY_BEIJING,ANALY_TRIUMF_CVMFS
 useContElementBoundary = True
